[improved][alfresco-promena-predefined-rendition] Adapted to new alfresco-promena-rendition model [added][alfresco-promena-predefined-rendition] RenditionDefinition for "pdf" and LibreOffice converter

--- a/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/dev-log4j.properties
+++ b/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/dev-log4j.properties
@@ -258,3 +258,5 @@ log4j.logger.org.alfresco.enterprise.repo.authorization.AuthorizationService=inf
 log4j.logger.org.alfresco.enterprise.repo.authorization.AuthorizationsConsistencyMonitor=warn
 
 log4j.logger.pl.beone=DEBUG
+
+log4j.logger.org.alfresco.repo.jscript.ScriptNode=DEBUG
