--- a/mm/rendition/alfresco-promena-predefined-rendition/pom.xml
+++ b/mm/rendition/alfresco-promena-predefined-rendition/pom.xml
@@ -22,6 +22,7 @@
         <alfresco-promena-rendition.version>0.9.0-SNAPSHOT</alfresco-promena-rendition.version>
 
         <converter-image-magick.version>0.9.0-SNAPSHOT</converter-image-magick.version>
+        <converter-libre-office.version>0.9.0-SNAPSHOT</converter-libre-office.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
@@ -107,6 +108,11 @@
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>converter-image-magick-application-model</artifactId>
             <version>${converter-image-magick.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>converter-libre-office-application-model</artifactId>
+            <version>${converter-libre-office.version}</version>
         </dependency>
 
         <dependency>
