--- a/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/Dockerfile
+++ b/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/Dockerfile
@@ -7,8 +7,10 @@ COPY Dockerfile extensions/*.jar $TOMCAT_DIR/webapps/alfresco/WEB-INF/lib/
 
 # Copy Dockerfile to avoid an error if no AMPs exist
 COPY Dockerfile extensions/*.amp $TOMCAT_DIR/amps/
-RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install \
-              $TOMCAT_DIR/amps $TOMCAT_DIR/webapps/alfresco -directory -nobackup -force
+RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-client-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-http-client-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-rendition-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-predefined-rendition-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force
 
 COPY alfresco-global.properties $TOMCAT_DIR/shared/classes/alfresco-global.properties
 COPY dev-log4j.properties $TOMCAT_DIR/shared/classes/alfresco/extension
