--- a/mm/client/alfresco-promena-activemq-client/src/main/docker/dev-log4j.properties
+++ b/mm/client/alfresco-promena-activemq-client/src/main/docker/dev-log4j.properties
@@ -257,11 +257,4 @@ log4j.logger.org.alfresco.repo.usage.RepoUsageMonitor=info
 log4j.logger.org.alfresco.enterprise.repo.authorization.AuthorizationService=info
 log4j.logger.org.alfresco.enterprise.repo.authorization.AuthorizationsConsistencyMonitor=warn
 
-#-----------------------------------------------------------------------
-# Platform module logging
-#-----------------------------------------------------------------------
-log4j.logger.pl.beone.promena.alfresco.module.client.activemq.platformsample.DemoComponent=debug
-log4j.logger.pl.beone.promena.alfresco.module.client.activemq.platformsample.HelloWorldWebScript=debug
-
-
-
+log4j.logger.pl.beone=DEBUG
