--- a/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
@@ -60,6 +60,10 @@
 
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
 
+        <!-- Put TRANSFORMERS versions here -->
+
+        <!-- /Put -->
+
         <promena-docker-maven-plugin.version>0.9.0-SNAPSHOT</promena-docker-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
