--- a/mm/client/alfresco-promena-activemq-client/pom.xml
+++ b/mm/client/alfresco-promena-activemq-client/pom.xml
@@ -107,7 +107,7 @@
             <artifactId>alfresco-promena-client</artifactId>
             <version>${alfresco-promena-client.version}</version>
             <type>amp</type>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -501,7 +501,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/extensions</outputDirectory>
-                            <includeScope>runtime</includeScope>
+                            <includeScope>provided</includeScope>
                             <includeTypes>amp</includeTypes>
                         </configuration>
                     </execution>
