--- a/mm/client/alfresco-promena-http-client/pom.xml
+++ b/mm/client/alfresco-promena-http-client/pom.xml
@@ -94,7 +94,7 @@
             <artifactId>alfresco-promena-client</artifactId>
             <version>${alfresco-promena-client.version}</version>
             <type>amp</type>
-            <scope>runtime</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -504,7 +504,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/extensions</outputDirectory>
-                            <includeScope>runtime</includeScope>
+                            <includeScope>provided</includeScope>
                             <includeTypes>amp</includeTypes>
                         </configuration>
                     </execution>
