--- a/intellij/promena-client/src/main/resources/META-INF/plugin.xml
+++ b/intellij/promena-client/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
-    <id>pl.beone.promena.intellijj.plugin.PromenaClient</id>
-    <name>Promena client</name>
+    <id>pl.beone.promena.intellijj.plugin.Promena</id>
+    <name>Promena</name>
     <version>0.9.0-SNAPSHOT</version>
     <vendor>BeOne</vendor>
 
@@ -12,6 +12,9 @@
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider language="JAVA"
                                         implementationClass="pl.beone.promena.intellij.plugin.linemarker.JavaRelatedItemLineMarkerProvider"/>
+
+        <configurationType
+                implementation="pl.beone.promena.intellij.plugin.configuration.PromenaRunConfigurationType"/>
     </extensions>
 
 </idea-plugin>
