--- a/mm/alfresco-promena-core/docker/docker-compose.yml
+++ b/mm/alfresco-promena-core/docker/docker-compose.yml
@@ -46,14 +46,18 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - alfresco-promena-core-ass-volume:/opt/alfresco-search-services/contentstore
-      - alfresco-promena-core-ass-volume:/opt/alfresco-search-services/data
-      - alfresco-promena-core-ass-volume:/opt/alfresco-search-services/solrhome
+      - alfresco-promena-core-ass-data-volume:/opt/alfresco-search-services/data
+      - alfresco-promena-core-ass-contentstore-volume:/opt/alfresco-search-services/contentstore
+      - alfresco-promena-core-ass-solrhome-volume:/opt/alfresco-search-services/solrhome
 
 volumes:
   alfresco-promena-core-acs-volume:
     external: true
   alfresco-promena-core-db-volume:
     external: true
-  alfresco-promena-core-ass-volume:
+  alfresco-promena-core-ass-data-volume:
+    external: true
+  alfresco-promena-core-ass-contentstore-volume:
+    external: true
+  alfresco-promena-core-ass-solrhome-volume:
     external: true
