--- a/mm/connector/alfresco-promena-connector-activemq/docker/docker-compose.yml
+++ b/mm/connector/alfresco-promena-connector-activemq/docker/docker-compose.yml
@@ -46,9 +46,9 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - alfresco-promena-connector-activemq-ass-volume:/opt/alfresco-search-services/contentstore
-      - alfresco-promena-connector-activemq-ass-volume:/opt/alfresco-search-services/data
-      - alfresco-promena-connector-activemq-ass-volume:/opt/alfresco-search-services/solrhome
+      - alfresco-promena-connector-activemq-ass-data-volume:/opt/alfresco-search-services/data
+      - alfresco-promena-connector-activemq-ass-contentstore-volume:/opt/alfresco-search-services/contentstore
+      - alfresco-promena-connector-activemq-ass-solrhome-volume:/opt/alfresco-search-services/solrhome
 
   activemq:
     image: alfresco/alfresco-activemq:5.15.6
@@ -67,7 +67,11 @@ volumes:
     external: true
   alfresco-promena-connector-activemq-db-volume:
     external: true
-  alfresco-promena-connector-activemq-ass-volume:
+  alfresco-promena-connector-activemq-ass-data-volume:
+    external: true
+  alfresco-promena-connector-activemq-ass-contentstore-volume:
+    external: true
+  alfresco-promena-connector-activemq-ass-solrhome-volume:
     external: true
   alfresco-promena-connector-activemq-activemq-volume:
     external: true
