--- a/mm/rendition/alfresco-promena-predefined-rendition/docker/docker-compose.yml
+++ b/mm/rendition/alfresco-promena-predefined-rendition/docker/docker-compose.yml
@@ -46,9 +46,9 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - alfresco-promena-predefined-rendition-ass-volume:/opt/alfresco-search-services/contentstore
-      - alfresco-promena-predefined-rendition-ass-volume:/opt/alfresco-search-services/data
-      - alfresco-promena-predefined-rendition-ass-volume:/opt/alfresco-search-services/solrhome
+      - alfresco-promena-predefined-rendition-ass-data-volume:/opt/alfresco-search-services/data
+      - alfresco-promena-predefined-rendition-ass-contentstore-volume:/opt/alfresco-search-services/contentstore
+      - alfresco-promena-predefined-rendition-ass-solrhome-volume:/opt/alfresco-search-services/solrhome
 
   promena:
     image: promena-predefined-rendition-executable:0.9.0-SNAPSHOT
@@ -58,5 +58,9 @@ volumes:
     external: true
   alfresco-promena-predefined-rendition-db-volume:
     external: true
-  alfresco-promena-predefined-rendition-ass-volume:
+  alfresco-promena-predefined-rendition-ass-data-volume:
+    external: true
+  alfresco-promena-predefined-rendition-ass-contentstore-volume:
+    external: true
+  alfresco-promena-predefined-rendition-ass-solrhome-volume:
     external: true
