[improved][mm] Problem with ASS volume after restart [added][alfresco-promena-predefined-rendition] Promena that is automatically build and run with docker-compose

--- a/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/Dockerfile
+++ b/mm/rendition/alfresco-promena-predefined-rendition/src/main/docker/Dockerfile
@@ -9,6 +9,7 @@ COPY Dockerfile extensions/*.jar $TOMCAT_DIR/webapps/alfresco/WEB-INF/lib/
 COPY Dockerfile extensions/*.amp $TOMCAT_DIR/amps/
 RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-core-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
     java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-connector-http-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-connector-activemq-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
     java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-rendition-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
     java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-predefined-rendition-0.9.0-SNAPSHOT.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force
 
