--- a/mm/rendition/alfresco-promena-predefined-rendition/docker-img/promena-predefined-rendition-executable/pom.xml
+++ b/mm/rendition/alfresco-promena-predefined-rendition/docker-img/promena-predefined-rendition-executable/pom.xml
@@ -120,11 +120,11 @@
             <artifactId>promena-connector-http-configuration</artifactId>
             <version>${promena.connector.http.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>pl.beone.promena.connector</groupId>-->
-<!--            <artifactId>promena-connector-activemq-configuration</artifactId>-->
-<!--            <version>${promena.connector.activemq.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-activemq-configuration</artifactId>
+            <version>${promena.connector.activemq.version}</version>
+        </dependency>
 
         <!-- Management -->
 <!--        <dependency>-->
