--- a/mm/rendition/alfresco-promena-predefined-rendition/docker/docker-compose.yml
+++ b/mm/rendition/alfresco-promena-predefined-rendition/docker/docker-compose.yml
@@ -46,21 +46,30 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - alfresco-promena-predefined-rendition-ass-data-volume:/opt/alfresco-search-services/data
-      - alfresco-promena-predefined-rendition-ass-contentstore-volume:/opt/alfresco-search-services/contentstore
+      - alfresco-promena-predefined-rendition-ass-volume:/opt/alfresco-search-services/contentstore
+      - alfresco-promena-predefined-rendition-ass-volume:/opt/alfresco-search-services/data
       - alfresco-promena-predefined-rendition-ass-solrhome-volume:/opt/alfresco-search-services/solrhome
+
+  activemq:
+    image: alfresco/alfresco-activemq:5.15.6
+    ports:
+      - 8161:8161 # Web Console
+      - 5672:5672 # AMQP
+      - 61616:61616 # OpenWire
+      - 61613:61613 # STOMP
+    volumes:
+      - alfresco-promena-predefined-rendition-activemq-volume:/opt/activemq/conf
+      - alfresco-promena-predefined-rendition-activemq-volume:/var/log/activemq
+      - alfresco-promena-predefined-rendition-activemq-volume:/opt/activemq/data
 
   promena:
     image: promena-predefined-rendition-executable:0.9.0-SNAPSHOT
+    environment:
+      - spring.activemq.broker-url=failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true
 
 volumes:
   alfresco-promena-predefined-rendition-acs-volume:
-    external: true
   alfresco-promena-predefined-rendition-db-volume:
-    external: true
-  alfresco-promena-predefined-rendition-ass-data-volume:
-    external: true
-  alfresco-promena-predefined-rendition-ass-contentstore-volume:
-    external: true
+  alfresco-promena-predefined-rendition-ass-volume:
   alfresco-promena-predefined-rendition-ass-solrhome-volume:
-    external: true
+  alfresco-promena-predefined-rendition-activemq-volume:
