--- a/mm/rendition/alfresco-promena-predefined-rendition/pom.xml
+++ b/mm/rendition/alfresco-promena-predefined-rendition/pom.xml
@@ -19,6 +19,7 @@
 
         <alfresco-promena-core.version>0.9.0-SNAPSHOT</alfresco-promena-core.version>
         <alfresco-promena-connector-http.version>0.9.0-SNAPSHOT</alfresco-promena-connector-http.version>
+        <alfresco-promena-connector-activemq.version>0.9.0-SNAPSHOT</alfresco-promena-connector-activemq.version>
         <alfresco-promena-rendition.version>0.9.0-SNAPSHOT</alfresco-promena-rendition.version>
 
         <converter-image-magick.version>0.9.0-SNAPSHOT</converter-image-magick.version>
@@ -93,6 +94,13 @@
             <groupId>pl.beone.promena.alfresco.module.connector</groupId>
             <artifactId>alfresco-promena-connector-http</artifactId>
             <version>${alfresco-promena-connector-http.version}</version>
+            <type>amp</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.alfresco.module.connector</groupId>
+            <artifactId>alfresco-promena-connector-activemq</artifactId>
+            <version>${alfresco-promena-connector-activemq.version}</version>
             <type>amp</type>
             <scope>provided</scope>
         </dependency>
