--- a/mm/rendition/alfresco-promena-rendition/pom.xml
+++ b/mm/rendition/alfresco-promena-rendition/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>pl.beone.promena.alfresco.module.rendition</groupId>
     <artifactId>alfresco-promena-rendition</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>[MM][RENDITION] Rendition</name>
@@ -17,8 +17,8 @@
 
         <kotlin-logging.version>1.7.3</kotlin-logging.version>
 
-        <alfresco-promena-core.version>0.9.0-SNAPSHOT</alfresco-promena-core.version>
-        <alfresco-promena-connector-http.version>0.9.0-SNAPSHOT</alfresco-promena-connector-http.version>
+        <alfresco-promena-core.version>1.0.0</alfresco-promena-core.version>
+        <alfresco-promena-connector-http.version>1.0.0</alfresco-promena-connector-http.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
