--- a/base/promena-core/internal/internal/pom.xml
+++ b/base/promena-core/internal/internal/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>promena-core</artifactId>
         <groupId>pl.beone.promena.core</groupId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
