--- a/base/promena-core/pom.xml
+++ b/base/promena-core/pom.xml
@@ -7,14 +7,14 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <name>[BASE] Core</name>
 
     <groupId>pl.beone.promena.core</groupId>
     <artifactId>promena-core</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
     <modules>
@@ -59,8 +59,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
-        <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
+        <promena-core.version>1.0.0</promena-core.version>
+        <promena-transformer.version>1.0.0</promena-transformer.version>
     </properties>
 
     <dependencies>
