--- a/extension/communication/common/pom.xml
+++ b/extension/communication/common/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>pl.beone.promena.communication</groupId>
     <artifactId>promena-communication-common</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>[EXTENSION][COMMUNICATION] Common</name>
 
