--- a/extension/communication/file/internal/internal/pom.xml
+++ b/extension/communication/file/internal/internal/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>pl.beone.promena.communication.file.internal</groupId>
         <artifactId>promena-communication-file-internal</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
