--- a/extension/communication/file/internal/pom.xml
+++ b/extension/communication/file/internal/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>pl.beone.promena.communication.file.internal</groupId>
     <artifactId>promena-communication-file-internal</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>[EXTENSION][COMMUNICATION][INTERNAL] File</name>
 
@@ -48,8 +48,8 @@
     </pluginRepositories>
 
     <properties>
-        <promena-communication-file-interal.version>0.9.0-SNAPSHOT</promena-communication-file-interal.version>
-        <promena-communication-file-model.version>0.9.0-SNAPSHOT</promena-communication-file-model.version>
+        <promena-communication-file-interal.version>1.0.0</promena-communication-file-interal.version>
+        <promena-communication-file-model.version>1.0.0</promena-communication-file-model.version>
     </properties>
 
     <dependencies>
