--- a/extension/communication/memory/model/internal/pom.xml
+++ b/extension/communication/memory/model/internal/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>pl.beone.promena.communication.memory.model</groupId>
         <artifactId>promena-communication-memory-model</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>promena-communication-memory-model-internal</artifactId>
