--- a/extension/connector/activemq/pom.xml
+++ b/extension/connector/activemq/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>pl.beone.promena.connector</groupId>
     <artifactId>promena-connector-activemq</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>[EXTENSION][CONNECTOR] ActiveMQ</name>
 
@@ -53,7 +53,7 @@
     </pluginRepositories>
 
     <properties>
-        <promena-connector-activemq.version>0.9.0-SNAPSHOT</promena-connector-activemq.version>
+        <promena-connector-activemq.version>1.0.0</promena-connector-activemq.version>
 
         <javax.jms-api.version>2.0.1</javax.jms-api.version>
         <commons-math3.version>3.6.1</commons-math3.version>
