--- a/intellij/promena/build.gradle
+++ b/intellij/promena/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'pl.beone.promena.intellij.plugin'
-version '0.9.0-SNAPSHOT'
+version '1.0.0'
 
 sourceCompatibility = JavaVersion.VERSION_11
 
@@ -17,10 +17,10 @@ repositories {
 ext {
     kotlinVersion = '1.3.50'
 
-    promenaTransformerVersion = '0.9.0-SNAPSHOT'
-    promenaCoreVersion = '0.9.0-SNAPSHOT'
-    promenaCommunicationMemoryVersion = '0.9.0-SNAPSHOT'
-    promenaConnectorHttpVersion = '0.9.0-SNAPSHOT'
+    promenaTransformerVersion = '1.0.0'
+    promenaCoreVersion = '1.0.0'
+    promenaCommunicationMemoryVersion = '1.0.0'
+    promenaConnectorHttpVersion = '1.0.0'
 
     kryoVersion = '4.0.2'
 
