--- a/intellij/promena/src/main/resources/META-INF/plugin.xml
+++ b/intellij/promena/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>pl.beone.promena.intellijj.plugin.Promena</id>
     <name>Promena</name>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <vendor>BeOne</vendor>
 
     <idea-version since-build="192"/>
