--- a/mm/alfresco-promena-core/pom.xml
+++ b/mm/alfresco-promena-core/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-core</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>[MM] Core</name>
@@ -14,10 +14,10 @@
         <kotlin.version>1.3.50</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
-        <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
-        <promena-communication-memory-model.version>0.9.0-SNAPSHOT</promena-communication-memory-model.version>
-        <promena-communication-file-model.version>0.9.0-SNAPSHOT</promena-communication-file-model.version>
+        <promena-core.version>1.0.0</promena-core.version>
+        <promena-transformer.version>1.0.0</promena-transformer.version>
+        <promena-communication-memory-model.version>1.0.0</promena-communication-memory-model.version>
+        <promena-communication-file-model.version>1.0.0</promena-communication-file-model.version>
 
         <kotlin-logging.version>1.7.3</kotlin-logging.version>
         <reactor-core.version>3.2.11.RELEASE</reactor-core.version>
