--- a/mm/rendition/alfresco-promena-rendition/src/main/docker/Dockerfile
+++ b/mm/rendition/alfresco-promena-rendition/src/main/docker/Dockerfile
@@ -7,8 +7,9 @@ COPY Dockerfile extensions/*.jar $TOMCAT_DIR/webapps/alfresco/WEB-INF/lib/
 
 # Copy Dockerfile to avoid an error if no AMPs exist
 COPY Dockerfile extensions/*.amp $TOMCAT_DIR/amps/
-RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install \
-              $TOMCAT_DIR/amps $TOMCAT_DIR/webapps/alfresco -directory -nobackup -force
+RUN java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-core-1.0.0.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-connector-http-1.0.0.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force && \
+    java -jar $TOMCAT_DIR/alfresco-mmt/alfresco-mmt*.jar install $TOMCAT_DIR/amps/alfresco-promena-rendition-1.0.0.amp $TOMCAT_DIR/webapps/alfresco -nobackup -force
 
 COPY alfresco-global.properties $TOMCAT_DIR/shared/classes/alfresco-global.properties
 COPY dev-log4j.properties $TOMCAT_DIR/shared/classes/alfresco/extension
@@ -16,9 +17,3 @@ COPY disable-webscript-caching-context.xml $TOMCAT_DIR/shared/classes/alfresco/e
 
 # Copy Dockerfile to avoid an error if no license file exists
 COPY Dockerfile license/*.* $TOMCAT_DIR/webapps/alfresco/WEB-INF/classes/alfresco/extension/license/
-
-# It's required by rector-netty
-RUN echo $' \n\
-grant { \n\
-    permission java.security.AllPermission; \n\
-}; ' >> /usr/local/tomcat/conf/catalina.policy
