--- a/sdk/promena-extension/promena-extension-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-extension/promena-extension-archetype/src/main/resources/archetype-resources/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>${groupId}</groupId>
