--- a/sdk/promena-extension/promena-extension-parent/pom.xml
+++ b/sdk/promena-extension/promena-extension-parent/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-parent</artifactId>
-        <version>0.9.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>promena-extension-parent</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>[SDK][POM] Promena extension</name>
@@ -44,8 +44,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
-        <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
+        <promena-core.version>1.0.0</promena-core.version>
+        <promena-transformer.version>1.0.0</promena-transformer.version>
     </properties>
 
     <dependencyManagement>
