--- a/sdk/promena-transformer/promena-transformer-archetype/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.promena.sdk.maven.archetype</groupId>
     <artifactId>promena-transformer-archetype</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>maven-archetype</packaging>
 
     <name>[SDK][ARCHETYPE] Promena transformer</name>
