--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.promena.sdk.maven.parent</groupId>
     <artifactId>promena-transformer-parent</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>[SDK][POM] Promena transformer</name>
@@ -42,7 +42,7 @@
         <kotlin.version>1.3.50</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
+        <promena-transformer.version>1.0.0</promena-transformer.version>
 
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
 
@@ -53,7 +53,7 @@
         <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
         <junit-jupiter.version>5.5.1</junit-jupiter.version>
         <mockk.version>1.9.3</mockk.version>
-        <docker-extension-junit5.version>0.9.0-SNAPSHOT</docker-extension-junit5.version>
+        <docker-extension-junit5.version>1.0.0</docker-extension-junit5.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
