[added][promena-transformer-archetype] Default transformer parameters

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/src/main/resources/transformer-__transformerId__.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/src/main/resources/transformer-__transformerId__.properties
@@ -2,3 +2,5 @@ transformer.${package}.${pascalCaseTransformerId}Transformer.id.name=${transform
 transformer.${package}.${pascalCaseTransformerId}Transformer.id.sub-name=${transformerSubName}
 transformer.${package}.${pascalCaseTransformerId}Transformer.priority=1
 transformer.${package}.${pascalCaseTransformerId}Transformer.actors=1
+
+transformer.${package}.default.parameters.example2=test2
