--- a/sdk/promena-extension/promena-extension-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-extension/promena-extension-archetype/src/main/resources/archetype-resources/pom.xml
@@ -11,12 +11,12 @@
     </parent>
 
     <groupId>${groupId}</groupId>
-    <artifactId>${artifactId}-root</artifactId>
+    <artifactId>${artifactId}</artifactId>
     <version>${version}</version>
 
     <modules>
-        <module>${rootArtifactId}</module>
-        <module>${rootArtifactId}-configuration</module>
+        <module>internal</module>
+        <module>configuration</module>
     </modules>
     <packaging>pom</packaging>
 
