[improved][promena-transformer-archetype] Made folder names short [improved][promena-transformer-archetype] Special name and sub name in transformation id are allowed now

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
@@ -9,10 +9,10 @@
     <version>${version}</version>
 
     <modules>
-        <module>${rootArtifactId}-application-model</module>
-        <module>${rootArtifactId}</module>
-        <module>${rootArtifactId}-example</module>
-        <module>${rootArtifactId}-configuration</module>
+        <module>application-model</module>
+        <module>implementation</module>
+        <module>example</module>
+        <module>configuration</module>
     </modules>
     <packaging>pom</packaging>
 
