[added][promena-transformer-archetype] Transformer settings

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__artifactId__.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__artifactId__.properties
@@ -3,4 +3,6 @@ transformer.${package}.${pascalCaseTransformerId}Transformer.id.sub-name=${trans
 transformer.${package}.${pascalCaseTransformerId}Transformer.priority=1
 transformer.${package}.${pascalCaseTransformerId}Transformer.actors=1
 
-transformer.${package}.default.parameters.example2=test2
+transformer.${package}.settings.example=value
+
+transformer.${package}.default.parameters.example2=value2
