[improved][promena-transformer-archetype] Setting context structure [added][promena-transformer-archetype] Setting context test

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__artifactId__.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/configuration/src/main/resources/transformer-__artifactId__.properties
@@ -5,4 +5,5 @@ transformer.${package}.${pascalCaseTransformerId}Transformer.actors=1
 
 transformer.${package}.settings.example=value
 
+transformer.${package}.default.parameters.timeout=
 transformer.${package}.default.parameters.example2=value2
