[added][promena-connector-normal-http] Http headers construction functions [refactored][promena-connector-normal-http] Code structure and clarity

--- a/module/connector/normal-http/pom.xml
+++ b/module/connector/normal-http/pom.xml
@@ -84,6 +84,9 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
