[improved][promena-transformer-archetype] Adapted to new transformer structure (common "execute" function, utils classes, processor etc.)

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/implementation/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/implementation/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.base</groupId>
+            <artifactId>promena-transformer-util</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}-application-model</artifactId>
             <version>${${rootArtifactId}.version}</version>
